[gd_scene load_steps=5 format=3 uid="uid://dcu6vecsshdb5"]

[ext_resource type="Script" path="res://Code/UI/client_control.gd" id="1_ncb0x"]
[ext_resource type="Texture2D" uid="uid://b4eevwghux1yt" path="res://Art/Icons/deposit_icon.tres" id="2_1ugxr"]
[ext_resource type="Texture2D" uid="uid://bikuvj8x6rojn" path="res://Art/Avatars/velho_avatar.tres" id="3_gfsi8"]
[ext_resource type="Theme" uid="uid://csiw6phueu4uv" path="res://Art/Theme/hidden_button.tres" id="4_nbg4w"]

[node name="ClientButton" type="PanelContainer"]
custom_minimum_size = Vector2i(80, 52)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -26.0
offset_right = 45.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_ncb0x")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_top = 2.0
offset_right = 95.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_right = 95.0
offset_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 1

[node name="MoneyClientPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
offset_right = 41.0
offset_bottom = 48.0
mouse_filter = 2

[node name="tex_icon" type="TextureRect" parent="MarginContainer/HBoxContainer/MoneyClientPanel"]
unique_name_in_owner = true
offset_left = 8.0
offset_right = 32.0
offset_bottom = 24.0
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("2_1ugxr")

[node name="lb_value" type="Label" parent="MarginContainer/HBoxContainer/MoneyClientPanel"]
unique_name_in_owner = true
offset_top = 28.0
offset_right = 41.0
offset_bottom = 43.0
text = "2222"

[node name="VBoxContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
offset_left = 42.0
offset_right = 90.0
offset_bottom = 48.0
size_flags_vertical = 4
mouse_filter = 2

[node name="tex_avatar" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(48, 48)
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
texture = ExtResource("3_gfsi8")

[node name="lb_order" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
offset_left = 25.0
offset_right = 48.0
offset_bottom = 15.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "#2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="stressbar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(4, 0)
offset_left = 91.0
offset_right = 95.0
offset_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 2
fill_mode = 3
show_percentage = false

[node name="Interact" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
offset_right = 95.0
offset_bottom = 48.0
theme = ExtResource("4_nbg4w")
disabled = true
action_mode = 0

[connection signal="button_down" from="MarginContainer/Interact" to="." method="_on_interact_button_down"]
